--- a/styles/less/checkbox-btns.less
+++ b/styles/less/checkbox-btns.less
@@ -76,6 +76,9 @@
     margin-left: -4px;
     .label-container;
 }
+.checkbox-container.btn {
+    box-shadow: none !important;
+}
 .checkbox-container input {
     .label-container-input;
 }
